--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ swipe:
     down:
       command: 'xte "keydown Control_L" "keydown Alt_L" "key D" "keyup Alt_L" "keyup Control_L"'
     up:
-      command: 'xte "keydown Super_L" "keyup Super_L"'
+      command: 'xte "keydown Super_L" "key S" "keyup Super_L"'
     left:
       command: 'xte "keydown Alt_L" "keydown Shift_L" "key Tab" && sleep 0.4 && xte "keyup Alt_L" "keyup Shift_L"'
     right:
